[97] fixing sonarlint issues